# juce-plugin-course

./: .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  diff_todo_complete.sh
.github/workflows/: cmake.yml
assignments/: 1.03.md  CMAKE_NOTES.md
cmake/: CompilerWarnings.cmake
complete/: CMakeLists.txt  CMakePresets.json  compile_commands.json
complete/cmake/: CompilerWarnings.cmake
complete/examples/: CMakeLists.txt
complete/examples/Coordinates/: MainComponent.h
complete/examples/GuiAndAudioThreadIdPrinting/: MainComponent.h
complete/examples/GuiThreadIdPrinting/: MainComponent.h
complete/test/: CMakeLists.txt
complete/test/source/: BypassTransitionSmootherTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TremoloTest.cpp
complete/tremolo_plugin/: tremolo_plugin.h
complete/tremolo_plugin/include/Tremolo/: AboutComponent.h  BypassTransitionSmoother.h  CustomLookAndFeel.h  FixedStepRangedSmoothedValue.h  GradientComponent.h  JsonSerializer.h  LfoVisualizer.h  MessageOnClick.h  Parameters.h  PluginEditor.h  PluginProcessor.h  SampleFifo.h  Tremolo.h
complete/tremolo_plugin/include/Tremolo/detail/: StridedQueue.h
complete/tremolo_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  LfoVisualizer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
examples/: CMakeLists.txt
examples/Coordinates/: CMakeLists.txt  MainComponent.h
examples/UserEventHandlers/: CMakeLists.txt
plugin/: CMakeLists.txt
plugin/include/Tremolo/: BypassButton.h  CustomLookAndFeel.h  Gradient.h  JsonSerializer.h  LfoVisualizer.h  Parameters.h  PluginEditor.h  PluginProcessor.h  SampleFifo.h  Tremolo.h
plugin/source/: CustomLookAndFeel.cpp  JSONSerializer.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp  JSONSerializerTest.cpp  JsonSerializerTest.cpp  PluginProcessorTest.cpp  TremoloTest.cpp
test/source/detail/: StridedQueueTest.cpp
todo/: .gitignore  CMakeLists.txt  CMakePresets.json
todo/cmake/: CompilerWarnings.cmake
todo/test/: CMakeLists.txt
todo/test/source/: JsonSerializerTest.cpp  PluginProcessorTest.cpp  TremoloTest.cpp
todo/test/source/detail/: StridedQueueTest.cpp
todo/tremolo_plugin/: tremolo_plugin.cpp  tremolo_plugin.h
todo/tremolo_plugin/include/Tremolo/: BypassTransitionSmoother.h  CustomLookAndFeel.h  GradientComponent.h  Parameters.h  PluginEditor.h  PluginProcessor.h  Tremolo.h
todo/tremolo_plugin/source/: CustomLookAndFeel.cpp  JsonSerializer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
tremolo_plugin/: CMakeLists.txt  plugin.cpp  plugin.h  tremolo_plugin.h
tremolo_plugin/include/Tremolo/: CustomLookAndFeel.h  JsonSerializer.h  LfoVisualizer.h  Parameters.h  PluginEditor.h  SampleFifo.h  Tremolo.h
tremolo_plugin/include/Tremolo/detail/: StridedQueue.h
tremolo_plugin/source/: JsonSerializer.cpp  LfoVisualizer.cpp  Parameters.cpp  PluginEditor.cpp  PluginProcessor.cpp
